[package]
name = "transient-btree-index"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
license = "Apache-2.0"


[dependencies]
memmap2 = "0.5"
thiserror = "1"
serde = "1"
serde_derive = "1"
bincode = "1.3"
lfu = "0.2"

[dev-dependencies]
criterion = "0.3"
fake = "2.4"
debug_tree = "0.4"

[[bench]]
name = "btree"
harness = false