[package]
name = "transient-btree-index"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
license = "Apache-2.0"
description = "This crate allows you to create a BTree index backed by temporary files"
repository = "https://github.com/thomaskrause/transient-btree-index"

[dependencies]
memmap2 = "0.5"
thiserror = "1"
serde = "1"
serde_derive = "1"
bincode = "1.3"
linked-hash-map = "0.5"

[dev-dependencies]
criterion = "0.3"
fake = "2.4"
debug_tree = "0.4"
rayon = "1"
rand = {version="0.8", features=["small_rng"]}

[[bench]]
name = "btree"
harness = false