[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "This crate allows you to create a BTree index backed by temporary files."
edition = "2021"
license = "Apache-2.0"
name = "transient-btree-index"
repository = "https://github.com/thomaskrause/transient-btree-index"
version = "0.3.0"

[dependencies]
binary-layout = "2.1"
bincode = "1.3"
linked-hash-map = "0.5"
memmap2 = "0.5"
serde = "1"
serde_derive = "1"
tempfile = "3.3"
thiserror = "1"
num-integer = "0.1"

[dev-dependencies]
criterion = "0.3"
debug_tree = "0.4"
fake = "2.4"
rand = {version = "0.8", features = ["small_rng"]}
rayon = "1"

[[bench]]
harness = false
name = "btree"
